src/test/deca/syntax/invalid/resultats/test_print_syntax_error-lex.res
'{': [@0,228:228='{',<36>,9:0]
'println': [@1,231:237='println',<18>,10:1]
'(': [@2,238:238='(',<34>,10:8]
STRING: [@3,239:244='"kdfl"',<47>,10:9]
',': [@4,246:246=',',<33>,10:16]
';': [@5,248:248=';',<39>,10:18]
')': [@6,251:251=')',<35>,10:21]
';': [@7,252:252=';',<39>,10:22]
'}': [@8,254:254='}',<37>,11:0]
